--- a/Ejemplo-clase.html
+++ b/Ejemplo-clase.html
@@ -27,6 +27,10 @@
 <iframe src="http://www.lagaceta.com.ar/" width="500" height="500" frameborder="0">
 Texto para cuando se chifla el navegador y no me reconoce la etiqueta
 </iframe>
+
+<hr>
+<h2>CLASE GIT - PRUEBA</h2>
+<p>probando Repositorios y cambios en GIT</p>
     
 </body>
 </html>
