Agregando texto html en rama_nueva

--- a/Ejemplo-clase.html
+++ b/Ejemplo-clase.html
@@ -27,10 +27,16 @@
 <iframe src="http://www.lagaceta.com.ar/" width="500" height="500" frameborder="0">
 Texto para cuando se chifla el navegador y no me reconoce la etiqueta
 </iframe>
+<section>
+    <hr>
+    <h2>CLASE GIT - PRUEBA</h2>
+    <p>probando Repositorios y cambios en GIT</p>
+      
+</section>
+  <section>
+    <h3>Genero un cambio para la RAMA NUEVA</h3>
+    <p>probando el checkout entre ramas</p>
+  </section>
 
-<hr>
-<h2>CLASE GIT - PRUEBA</h2>
-<p>probando Repositorios y cambios en GIT</p>
-    
 </body>
 </html>
