Modifique nuevamente html y css para rama_nueva

--- a/Ejemplo-clase.html
+++ b/Ejemplo-clase.html
@@ -38,5 +38,10 @@ Texto para cuando se chifla el navegador y no me reconoce la etiqueta
     <p>probando el checkout entre ramas</p>
   </section>
 
+  <section id="segundo_commit">
+    <h4>Genero un segundo cambio para la RAMA NUEVA</h4>
+    <p>probando el checkout entre ramas por segunda vez</p>
+  </section>
+
 </body>
 </html>
